# ctf

./: CMakeLists.txt  LICENSE.TXT  README.md
benchmark/: CMakeLists.txt  compile-time.cpp  run-time.cpp
cmake/: ExternalProjects.cmake
include/: CMakeLists.txt
include/ctf/: format.hpp  format_error.hpp  formatter.hpp  formatter_string.hpp  parse.hpp  tuple.hpp  utility.hpp
scripts/: CMakeLists.txt
test/: CMakeLists.txt  diagnostics.cpp  format.cpp  main.cpp  string_view.cpp  valid.cpp
